HServer/Lib/DBC/HIODBC_cbits.h

typedef char* SQLSTRING_PTR;
typedef SQLHENV* SQLHENV_PTR;
typedef SQLHDBC* SQLHDBC_PTR;
typedef SQLHSTMT* SQLHSTMT_PTR;
typedef long* SQLINTEGER_PTR;
typedef enum {sql_invalid_handle=-2,sql_error=-1,sql_success=0,sql_success_with_info=1,sql_still_executing=2,sql_need_data=99,sql_no_data_found=100} SqlResult;
SQLINTEGER_PTR sqlNewInteger();
SQLINTEGER sqlGetInteger(SQLINTEGER_PTR);
SqlResult sqlFetch(SQLHSTMT_PTR);
SqlResult sqlGetData(SQLHSTMT_PTR,SQLUSMALLINT,SQLSMALLINT,SQLPOINTER,SQLINTEGER,SQLINTEGER_PTR);
SqlResult sqlStmtError(SQLHENV_PTR,SQLHDBC_PTR,SQLHSTMT_PTR,SQLSTRING_PTR,SQLSTRING_PTR,SQLINTEGER);
SqlResult sqlConnectError(SQLHENV_PTR,SQLHDBC_PTR,SQLSTRING_PTR,SQLSTRING_PTR,SQLINTEGER);
SqlResult sqlEnvError(SQLHENV_PTR,SQLSTRING_PTR,SQLSTRING_PTR,SQLINTEGER);
SqlResult sqlIsValidInteger(SQLINTEGER_PTR);
void sqlDeleteInteger(SQLINTEGER_PTR);