HServer/Lib/DBC/Types.hs


foreign import ccall unsafe "sqlFetch"
  sqlFetch :: SqlStmt -> IO SqlReturn

foreign import ccall unsafe "sqlNewInteger"
  sqlNewInteger :: IO (Ptr CLong)

foreign import ccall unsafe "sqlIsValidInteger"
  sqlIsValidInteger :: Ptr CLong -> IO SqlReturn

foreign import ccall unsafe "sqlDeleteInteger"
  sqlDeleteInteger :: Ptr CLong -> IO ()

foreign import ccall unsafe "sqlGetData"
  sqlGetData :: SqlStmt -> CUShort -> CShort -> Ptr () -> CLong -> Ptr CLong -> IO SqlReturn

foreign import ccall unsafe "sqlGetInteger"
  sqlGetInteger :: Ptr CLong -> IO CLong

foreign import ccall unsafe "sqlStmtError"
  sqlStmtError :: SqlEnv -> SqlDbc -> SqlStmt -> Ptr CChar -> Ptr CChar -> CLong -> IO SqlReturn

foreign import ccall unsafe "sqlConnectError"
  sqlConnectError :: SqlEnv -> SqlDbc -> Ptr CChar -> Ptr CChar -> CLong -> IO SqlReturn

foreign import ccall unsafe "sqlEnvError"
  sqlEnvError :: SqlEnv -> Ptr CChar -> Ptr CChar -> CLong -> IO SqlReturn

